Thu Mar 14 12:53:57 CET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Check for valid socket connection in client entries before
	  sending any messages.  Fixes a crash, but doesn't fix some
	  other underlaying bug that is lurking there.  Affected
	  file silcd/packet_send.c.

Thu Mar 14 13:38:12 EET 2002  Timo Sirainen <tss@iki.fi>

	* $usermode, $cumode and $cumode_space expandos shouldn't do
	  anything with non-SILC server records. Affected file
	  irssi/src/silc/core/silc-expandos.c

Wed Mar 13 21:38:26 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the silc_net_check_[host/local]_by_sock to support
	  IPv6 bound sockets as well.  Now they can return IPv6 addresses
	  as well.  Affected file lib/silcutil/silcnet.c.

	* Fixed silc_net_addr2bin to correctly convert IPv6 addresses.
	  Affected lib/silcutil/unix/silcunixnet.c.

	* Fixed ID rendering (at least on some platforms, not NetBSD)
	  for IPv6 addresses.  Affected file lib/silcutil/silcutil.c.

Tue Mar 12 17:58:59 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_hash_public_key and silc_hash_public_key_compare
	  functions to be used with SilcHashTable.  They can be used to
	  hash public keys and compare public keys in hash table.  Affected
	  file lib/silcutil/silcutil.[ch].

	* Added support for specifying multiple public keys for Client
	  connection section in server configuration file.  This makes it
	  possible to accept multiple public keys from same host, or to
	  make a section that accepts any incoming host, and have the
	  accepted public keys listed in the section.

	  Added functions silc_sever_[find/get]_public_key,  added the
	  support for this actually to all connection sections but only
	  the Client section is currently allowed to specify multiple
	  public keys.

	  Affected files are silcd/server.c, server_internal.h,
	  command.c, protocol.c, server_util.[ch], packet_receive.c.

Mon Mar 11 23:37:38 EET 2002  Pekka Riikonen <priikone@silcnet.org>
